# openDAW

./: .moises-scope-applied  README.md  js-features.md  package-lock.json  package.json  turbo.json
crates/: Cargo.toml
crates/abi/: Cargo.toml
crates/abi/src/: lib.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: indexed_collection.rs  lib.rs  note_collection.rs  note_events.rs  value_collection.rs  value_events.rs
crates/bindings/tests/: indexed_collection.rs  note_collection.rs  value_collection.rs  value_events.rs
crates/boxgraph/: Cargo.toml
crates/boxgraph/src/: address.rs  boxes.rs  bytes.rs  checksum.rs  field.rs  graph.rs  lib.rs  subscription.rs  updates.rs
crates/boxgraph/tests/: address.rs  boxes.rs  bytes.rs  field.rs  graph.rs  subscription.rs  updates.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: adsr.rs  analyser.rs  biquad.rs  crusher.rs  ctagdrc.rs  dattorro.rs  fast_math.rs  freeverb.rs  glide.rs  lfo.rs  lib.rs  meter.rs  osc.rs  panning.rs  ppqn.rs  ramp.rs  resampler.rs  simple_limiter.rs  smooth.rs  tidal.rs  vocoder.rs  waveshaper.rs
crates/dsp/tests/: adsr.rs  pitch.rs
crates/engine/: Cargo.toml
crates/engine-env/: Cargo.toml
crates/engine-env/src/: audio_buffer.rs  audio_bus_processor.rs  audio_generator.rs  audio_input.rs  audio_output_buffer_registry.rs  audio_processor.rs  aux_send.rs  channel_strip.rs  (+20 more)
crates/math/: Cargo.toml
crates/processors/: Cargo.toml
crates/sine/: Cargo.toml
crates/studio-boxes/: Cargo.toml
crates/transport/: Cargo.toml
crates/value/: Cargo.toml
crates/voicing/: Cargo.toml
(+300 files in other folders)
